# shapeitup

./: .gitignore  README.md  pyproject.toml
shapeitup/: cli.py
shapeitup/core/: impl_scheduler.py  stage_planner.py  state.py  team.py  transitions.py
shapeitup/core/commands/: _base.py  _registry.py  agent_commands.py  analysis_commands.py  gate_commands.py  impl_commands.py  synthesis_commands.py  team_commands.py
shapeitup/ml/: context_ranker.py  drift_detector.py  failure_classifier.py  path_classifier.py  profile_detector.py
skills/shapeitup/: SKILL.md
tests/: test_agent_commands.py  test_cli.py  test_state.py  test_synthesis_commands.py  test_team.py
tests/ml/: test_context_ranker.py  test_failure_classifier.py  test_path_classifier.py
