[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shapeitup"
version = "0.1.0"
description = "Human-gated staged delivery workflow engine with ML-powered analysis"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "spacy>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
shapeitup = "shapeitup.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shapeitup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
